syntax = "proto3";

package vorpal.worker;

option go_package = "github.com/ALT-F4-LLC/vorpal/sdk/go/pkg/api/worker";

import "artifact/artifact.proto";

service WorkerService {
    rpc BuildArtifact(BuildArtifactRequest) returns (stream BuildArtifactResponse);
}

message BuildArtifactRequest {
  optional string artifact_alias = 1;
  vorpal.artifact.Artifact artifact = 2;
}

message BuildArtifactResponse {
    string output = 1;
}
